--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,11 @@
     "jwthelper": "^0.0.4",
     "moment-timezone": "^0.5.45",
     "normalize.css": "^8.0.1",
+    "prismjs": "^1.29.0",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-helmet": "^6.1.0",
@@ -48,6 +50,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.25.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.4",
     "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
